--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -125,9 +125,9 @@
 
 }
 
-.pcoded-navbar .pcoded-inner-navbar li>a>.pcoded-micon+.pcoded-mtext {
+/* .pcoded-navbar .pcoded-inner-navbar li>a>.pcoded-micon+.pcoded-mtext {
     top: 14px;
-}
+} */
 
 .info {
     margin-bottom: 1px;
