--- a/public/css/login.css
+++ b/public/css/login.css
@@ -49,10 +49,11 @@ body {
     max-width: 326px;
 }
 
-.login-card .form-control {
+.login-card .form-control,
+.custom-select {
     border: 1px solid #d5dae2;
-    padding: 15px 25px;
-    margin-bottom: 20px;
+    /* padding: 15px 25px; */
+    /*  margin-bottom: 20px; */
     min-height: 45px;
     font-size: 13px;
     /* line-height: 15; */
