--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -213,3 +213,8 @@ section.pricing {
     width: 50px;
     height: 50px;
 }
+
+.small a {
+    font-weight: bold !important;
+    font-size: 15px !important;
+}
